prevent horizontal scrolling on mobile

--- a/st.css
+++ b/st.css
@@ -25,7 +25,8 @@ html {
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .page-wrapper {
@@ -108,7 +109,7 @@ html {
     background: white;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     flex-grow: 1;
     padding: 10px 20px 20px 20px;
@@ -441,10 +442,6 @@ progress::-webkit-progress-bar {
     }
 
     /* index.html */
-    .list-wrapper {
-        justify-content: start;
-    }
-
     .pokemon-list {
         display: flex;
         grid-template-columns: unset;
